# CelestialFlow

./: .gitignore  AGENTS.md  Makefile  README.md  TaskMonitor.js  app.py  pyproject.toml  pytest.ini  setup.py
.agent/skills/docs-zh-sync/: SKILL.md
.agent/skills/quality-review/: SKILL.md
.agents/skills/docs-i18n-sync/: SKILL.md  _subagent-base.md
.agents/skills/docs-zh-sync/: SKILL.md  _subagent-audit.md  _subagent-base.md  _subagent-writing.md  subagent-bench-demo.md  subagent-funnel-stage-obs-persist.md  subagent-runtime-graph.md  subagent-tests.md  subagent-utils-web.md  subagent-utils.md  subagent-web-static.md
.agents/skills/quality-review/: SKILL.md  _subagent-base.md  subagent-architecture.md  subagent-concurrency.md  subagent-error-edge.md  subagent-naming-style.md  subagent-refactoring.md  subagent-testability.md  subagent-type-safety.md
.github/workflows/: ci.yml
.trae/skills/docs-zh-sync/: SKILL.md
bench/: README.md  bench_datastructures.py  bench_execution_mode.py  bench_executor.py  bench_futures_memory.py  bench_gil_vs_nogil.py  bench_graph.py  bench_graph_mode.py  bench_hash.py  bench_hash_container.py  bench_hash_memory.py  bench_http_grpc.py  bench_ipc_queue.py  bench_lock_overhead.py  bench_mpqueue_vs_shared_memory.py  bench_persistence_spout.py  bench_queue.py  bench_requests.py  bench_tqdm.py  bench_utils.py  graph.py
benchmark/: bench_grpc_http.py  bench_hash.py
celestialflow-3.0.8/src/celestialflow/: task_manage.py
demo/: demo_executor.py  demo_funnel.py  demo_graph.py  demo_observer.py  demo_redis.py  demo_stages.py  demo_structure.py  demo_utils.py
docs/: change_log.md  presentation.md  quick_start.md  tutorial.md
docs/bench/: bench_datastructures.md  bench_executor.md  bench_graph.md  bench_hash.md  bench_http_grpc.md  bench_ipc_queue.md  bench_mpqueue_vs_shared_memory.md  bench_queue.md  bench_requests.md  bench_tqdm.md
docs/demo/: demo_executor.md  demo_stages.md  demo_structure.md  demo_utils.md
docs/en/: README.md  change_log.md  presentation.md  quick_start.md  tutorial.md
docs/en/bench/: README.md  bench_datastructures.md  bench_execution_mode.md  bench_executor.md  bench_futures_memory.md  bench_gil_vs_nogil.md  bench_graph.md  bench_graph_mode.md  bench_hash.md  bench_hash_container.md  bench_hash_memory.md  bench_http_grpc.md  bench_ipc_queue.md  bench_lock_overhead.md  (+6 more)
docs/ja/: README.md  change_log.md  presentation.md  quick_start.md  tutorial.md
docs/other/: __init__.md  ctree_client.md  go_worker.md
docs/reference/: ctree_client.md  go_worker.md  task_errors.md  task_executor.md  task_graph.md  task_logging.md  task_manage.md  task_metrics.md  task_nodes.md  task_queue.md  task_stage.md  task_structure.md
docs/tests/: test_graph.md  test_metrics.md  test_utils.md
docs/zh-CN/: README.md  change_log.md  presentation.md  quick_start.md  tutorial.md
experiment/: experiment_queue.py  experiment_redis.py
experiments/: bench_executor.py  bench_graph.py  benchmark_datastructures.py  benchmark_hash.py  benchmark_queue.py  benchmark_tqdm.py  experiment_networkx.py  experiment_tqdm.py
go_worker/: go.mod  main.go
go_worker/worker/: parser.go  processor.go  types.go  worker.go
src/celestialflow/: README.md  __init__.py  fail_sinker.py  task_errors.py  task_executor.py  task_graph.py  task_logger.py  task_logging.py  task_manage.py  task_metrics.py  task_nodes.py  task_progress.py  task_queue.py  task_report.py  task_stage.py  task_structure.py  task_support.py  task_tools.py  task_tree.py  task_types.py  task_web.py
templates/: index.html
tests/: README.md  conftest.py  test_analysis.py  test_envelope.py  test_executor.py  test_graph.py  test_manage.py  test_metrics.py  test_nodes.py  test_queue.py  test_stage.py  test_stages.py  test_structure.py  test_task.py  test_tree.py  test_utils.py
tests/funnel/: test_funnel.py  test_inlet.py  test_spout.py
tests/graph/: test_analysis.py  test_graph.py  test_serialize.py  test_structure.py
tests/observability/: test_observer.py  test_reporter_injection.py
tests/persistence/: test_fail.py  test_fallback.py  test_jsonl.py  test_log.py  test_persistence.py  test_splite.py  test_success.py
tests/runtime/: conftest.py  test_dispatch.py  test_envelope.py  test_errors.py  test_estimators.py  test_hash.py  test_metrics.py  test_queue.py  test_types.py
tests/stage/: test_executor.py  test_stage.py  test_stages.py
tests/utils/: test_clone.py  test_estimators.py  test_format.py  test_utils_clone.py  test_utils_errors.py  test_utils_types.py
tests/web/: conftest.py  test_server.py
typings/celestialtree/: __init__.pyi
typings/dotenv/: __init__.pyi
typings/pytest/: __init__.pyi
(+802 files in other folders)
