[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "celestialflow"
version = "3.2.4"
description = "A flexible GRAPH-based task orchestration framework."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Mr-xiaotian", email = "mingxiaomingtian@gmail.com" }]
keywords = ["workflow", "task", "graph", "async", "CelestialFlow"]
requires-python = ">=3.12"

dependencies = [
    "tqdm",
    "fastapi",
    "uvicorn",
    "requests",
    "networkx",
    "redis",
    "jinja2",
    "celestialtree>=0.1.3",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
"Homepage" = "https://github.com/Mr-xiaotian/CelestialFlow"
"Bug Tracker" = "https://github.com/Mr-xiaotian/CelestialFlow/issues"

[project.scripts]
celestialflow-web = "celestialflow.web.core_server:main_entry"

[tool.setuptools]
license-files = []

[tool.setuptools.package-data]
celestialflow = [
    "web/templates/**/*.html",
    "web/static/**/*",
    "web/config.json"
]

[tool.pytest.ini_options]
addopts = "-s"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestDeprecationWarning",
]

asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.0",
    "pyright>=1.1.409",
]

[tool.pyright]
include = ["src"]
ignore = ["tests", "**/tests/**", "typings", "demo", "bench", "experiments", "examples", "temp"]

typeCheckingMode = "strict"
reportUnusedFunction = "none"
reportImplicitOverride = "none"

[tool.ruff]
target-version = "py312"
exclude = ["tests", "typings", "demo", "bench", "experiments", "examples", "temp"]

[tool.ruff.lint]
select = [
    "E", "F",      # pycodestyle errors + pyflakes
    "I",           # isort (import order)
    "UP",          # pyupgrade
    "B",           # flake8-bugbear
    "SIM",         # flake8-simplify
    "C4",          # flake8-comprehensions
    "RUF",         # ruff-specific rules
]
ignore = [
    "E501",        # line too long（交给 formatter）
    "RUF001",      # 字符串内 Unicode 字符（中文内容）
    "RUF002",      # 中文标点（项目使用中文 docstring）
    "RUF003",      # 中文注释标点
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["celestialflow"]
